Fixed a graphical bug that would cause the footer to overlap content.

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -9,7 +9,11 @@ html {
 }
 
 body {
-    margin-bottom: $footer-height;
+    margin-bottom: $footer-height !important;
+}
+
+main {
+    padding-bottom: $spacer;
 }
 
 .footer {
